src/objects/Natterbox_Call_Reporting_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that this call is related to (if applicable)</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallConnected__c</fullName>
        <description>Indicates if the call was sucsefully connected.</description>
        <label>CallConnected</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CallDirection__c</fullName>
        <description>The direction, inbound or outbound, of the call.</description>
        <label>CallDirection</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CallDurationSeconds__c</fullName>
        <description>Total length of the call in seconds.</description>
        <label>CallDurationSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallEndDate__c</fullName>
        <description>Date and time the call ended.</description>
        <label>CallEndDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallEndEpoch__c</fullName>
        <description>The time the called ended in seconds since 01-01-1970</description>
        <label>CallEndEpoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHuntSeconds__c</fullName>
        <description>Total time the call was hunting in seconds.</description>
        <label>CallHuntSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallRingSeconds__c</fullName>
        <description>Total time the call was ringing in seconds.</description>
        <label>CallRingSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallStartDate__c</fullName>
        <description>Date and time the call started.</description>
        <label>CallStartDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallStartEpoch__c</fullName>
        <description>The time the call started in seconds since 01-01-1970</description>
        <label>CallStartEpoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallTalkSeconds__c</fullName>
        <description>Total time the caller and the callee were talking in seconds.</description>
        <label>CallTalkSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalledCountryShort__c</fullName>
        <description>The short code of the country of the number called (If known)</description>
        <label>CalledCountryShort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalledNumberIn__c</fullName>
        <description>This is the number that the caller dialled to enter the Natterbox service.</description>
        <label>CalledNumberIn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CalledNumber__c</fullName>
        <description>Phone number that was Called</description>
        <label>CalledNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CalledRoaming__c</fullName>
        <description>If the person being called is on a mobile phone that is roaming, this will be the short counrty code that the user is currently in.</description>
        <label>CalledRoaming</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerCountryShort__c</fullName>
        <description>The short country code of the caller (if known)</description>
        <label>CallerCountryShort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerEmailAddress__c</fullName>
        <description>Email address of the caller.</description>
        <label>CallerEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CallerFirstName__c</fullName>
        <description>First Name of the Caller (If Known)</description>
        <label>CallerFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerGroup__c</fullName>
        <description>Name of the Natterbox Group that the caller is a member of.</description>
        <label>CallerGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerLastName__c</fullName>
        <description>Caller Last Name (If Known)</description>
        <label>CallerLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerNumber__c</fullName>
        <description>Number of the Caller</description>
        <label>CallerNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallerRoaming__c</fullName>
        <description>If the calling is connecting from a roaming mobile phone, this will be the short code of the country that caller is comming from (If known)</description>
        <label>CallerRoaming</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerType__c</fullName>
        <description>Type of the Caller. Device, User or External</description>
        <label>CallerType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerUserAgent__c</fullName>
        <description>If the caller is using a SIP device and that SIP device is set to broadcast it hardware details.  Those details will be placed here.</description>
        <label>CallerUserAgent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_User_Full_Name__c</fullName>
        <label>Caller User Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedEmailAddress__c</fullName>
        <description>This is the email address of the user that the call was connected to (as configured in the Natterbox portal)</description>
        <label>ConnectedEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ConnectedFirstName__c</fullName>
        <description>This is the first name of the user that answered the call.</description>
        <label>ConnectedFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedGroup__c</fullName>
        <description>If the user the call is connected to is a member of a group, their group name is put here.</description>
        <label>ConnectedGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedLastName__c</fullName>
        <description>This is the last name of the user that answered the call.</description>
        <label>ConnectedLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedNumber__c</fullName>
        <description>If the call was passed on to an external PSTN number, the number will be shown here.</description>
        <label>ConnectedNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ConnectedType__c</fullName>
        <description>This is the type of device that the call was answered on. The options are &apos;User, Device or External&apos;</description>
        <label>ConnectedType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedUserAgent__c</fullName>
        <description>If the receiver of the call is on a SIP device, this is the details of that device.</description>
        <label>ConnectedUserAgent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connnected_User_Full_Name__c</fullName>
        <label>Connected User Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Month__c</fullName>
        <label>Day of the Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <label>Day of the Week</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialledNumber__c</fullName>
        <description>This is the number that was called by the caller. This can be an internal or an external number.</description>
        <label>DialledNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164CalledNumberIn__c</fullName>
        <description>This is the number that the caller called to enter the Natterbox service but in international format.</description>
        <label>E164CalledNumberIn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164CalledNumber__c</fullName>
        <description>The Number that was called in International format.</description>
        <label>E164CalledNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164CallerNumber__c</fullName>
        <description>Number of the caller in international format.</description>
        <label>E164CallerNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164ConnectedNumber__c</fullName>
        <description>If the call was passed out of the Natterbox service to a PSTN number, it is this number that was dialled - in international format.</description>
        <label>E164ConnectedNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164DiversionNumber__c</fullName>
        <description>If the number was diverted be a previous telco and they make available the diversion information, it will be placed here.</description>
        <label>E164DiversionNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ExternalConnectedNumber__c</fullName>
        <description>If the inbound call was connected to an external PSTN number rather than a user. This number will be shown here.</description>
        <label>ExternalConnectedNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HangupCause__c</fullName>
        <description>The reason that the call finished.</description>
        <label>HangupCause</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeCountryCode__c</fullName>
        <description>The counrty code of the user that made or received the call. For example, UK would be 44.</description>
        <label>HomeCountryCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead that this call is related to (if applicable)</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_of_the_Year__c</fullName>
        <label>Month of the Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Date__c</fullName>
        <label>Hour of the Day</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Not_In_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the number could not be found in Salesforce, this checkbox will be ticked.</description>
        <label>Number Not In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The SalesForce user that owns this call record (If applicable)</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PolicyStartType__c</fullName>
        <description>The type of Natterbox dialplan policy that the call went thought.</description>
        <label>PolicyStartType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <description>A URL link to the call recording (if one was made)</description>
        <label>Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that this call is related to (if applicable)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solid_Call_Time__c</fullName>
        <description>Time threshold in seconds for a Solid Call</description>
        <label>Solid Call Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solid_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solid Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>The unique identifier for the call.</description>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapup_Code__c</fullName>
        <label>Wrapup Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Natterbox Call Reporting Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Service Calls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Natterbox Call Reporting Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>